# vmtt-bot

./: .gitignore  Dockerfile  LICENSE  README.md  example.env  gen_cloudapi  pyproject.toml  setup.cfg
vmtt_bot/: main.py  settings.py  yc_stt.py
