[tool.poetry]
name = "vmtt-bot"
version = "0.1.0"
description = "Voice message to text Telegram Bot"
authors = ["Alexey Vaganov <poofeg@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/poofeg/vmtt-bot"
packages = [
    { include = "vmtt_bot" },
    { include = "yandex", from = "vendor" },
]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.20"
aiohttp = "^3.8.1"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
grpcio = "1.44.0"
protobuf = "^3.20.0"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
flake8 = "^4.0.1"
grpcio-tools = "1.44.0"
mypy-protobuf = "^3.2.0"

[tool.poetry.scripts]
vmtt-bot = "vmtt_bot.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
